// Copyright 2018 the orbs-network-typescript authors
// This file is part of the orbs-network-typescript library in the Orbs project.
//
// This source code is licensed under the MIT license found in the LICENSE file in the root directory of this source tree.
// The above notice should be included in all copies or substantial portions of the software.

syntax = "proto3";

message Transaction {
  TransactionHeader header = 1;
  string payload = 2;
  TransactionSignatureData signatureData = 3;
}

message TransactionHeader {
  uint32 version = 1;
  bytes sender = 2;
  uint64 timestamp = 3;
  bytes contractAddress = 4;
}

message TransactionSignatureData {
  bytes publicKey = 1;
  bytes signature = 2;
}

message TransactionReceipt {
  bytes txHash = 1;
  bool success = 2; // TODO: This is just a temporary field to distinguish between successful and failed transactions
}

message TransactionEntry {
  bytes txHash = 1;
  Transaction transaction = 2;
}

message SendTransactionInput {
  Transaction transaction = 1;
}

message SendTransactionOutput {
}
